apps/base/selfhosted/searx/searx-ingress.yaml
#test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searx-ingress
  namespace: selfhosted
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: search.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "600"
spec:
  rules:
    - host: search.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
  tls:
    - secretName: searx-tls
      hosts:
        - search.thekitty.zone
